Some test fixes && Permissions in database for policy gates && Minor details

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,7 +4,7 @@
 @tailwind variants;
 
 :root {
-    --dark-full: #09090B;
+    --dark-full: #18181b;
     --dark-light: #27272A;
     --dark-shadWhite: #FAFAFA;
 
